@@ -23,7 +23,13 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <parallel>
+      <manufacturer>OKI DATA CORP</manufacturer>
+      <model>OKIPAGE 10e</model>
+      <description>OKIPAGE 10e</description>
+      <commandset>PJL,PCLXL,PCL,EPSONFX,IBMPPR</commandset>
+    </parallel>
+  </autodetect>
   <functionality>A</functionality>
   <driver>hpijs</driver><!--verified--><!--no "contrib_url"-->
   <comments>
