@@ -1,3 +1,8 @@
+2006-12-13  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/Okidata-Okipage_10e.xml: Added IEEE 1284 information (RH
+	bug #188762).
+
 2006-12-12  Tim Waugh  <twaugh@redhat.com>
 
 	* printer/Ricoh-Aficio_CL7200.xml: Added SNMP information (RH
